--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ beanie==1.27.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+dnspython==2.7.0
 ecdsa==0.19.0
+email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.3
 fastapi-cli==0.0.5
