--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-MONGO_DB_URL=
-SECRET_KEY=
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
+MONGO_DB_URL=                       
+JWT_SECRET_KEY=
+JWT_ALGORITHM=HS256                 
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30  
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7     
+
+APP_FRONTEND_URL=http://localhost:5173  
+APP_LOCALHOST_URL=http://localhost:5173 
+APP_ENVIRONMENT=dev
